contacts.css fixed layout shifting bugs

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -110,13 +110,16 @@
     background-color: #2A3647;
 }
 
-.add-new-button:hover, .popup-buttons button:last-child:hover {
+.add-new-button:hover,
+.popup-buttons button:last-child:hover {
     background: #29ABE2;
-    border: 0;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-/* TODO: Remove Button Shifting on hover */
+.add-new-button:hover {
+    border: 0;
+    margin: 1px;
+}
 
 .add-new-button span {
     font-size: 1.3125rem;
@@ -248,6 +251,7 @@ button,
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    text-align: center;
 }
 
 .info-buttons div:hover {
@@ -255,7 +259,14 @@ button,
     font-weight: 700;
 }
 
-/* TODO: Remove button shifting */
+.info-buttons div span::after {
+    display: block;
+    content: attr(name);
+    font-weight: bold;
+    visibility: hidden;
+    overflow: hidden;
+    height: 0px;
+}
 
 .info-buttons div img {
     width: 1.5rem;
@@ -447,6 +458,7 @@ button,
 
 .popup-buttons button:first-child:hover {
     border: 2px solid #29ABE2;
+    margin: -1px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #29ABE2;
 }
@@ -454,8 +466,6 @@ button,
 .popup-buttons button:first-child:hover img {
     filter: invert(61%) sepia(25%) saturate(728%) hue-rotate(155deg) brightness(91%) contrast(94%);
 }
-
-/* TODO: Remove button Shifting */
 
 .popup-buttons button:last-child {
     color: #FFF;
